add sex as enum
