# docs/swagger.json
@@ -42,6 +42,38 @@
                 }
             }
         },
+        "/account/player": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "Account/Login"
+                ],
+                "summary": "Create player",
+                "parameters": [
+                    {
+                        "description": "Params to create player",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.RegisterPlayerRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/requests.RegisterPlayerResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "tags": [
@@ -85,7 +117,7 @@
                 }
             }
         },
-        "/secured/ping": {
+        "/ping": {
             "get": {
                 "security": [
                     {
@@ -101,38 +133,6 @@
                         "description": "pong!",
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/secured/player": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "tags": [
-                    "Account/Login"
-                ],
-                "summary": "Create player",
-                "parameters": [
-                    {
-                        "description": "Params to create player",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.RegisterPlayerRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/requests.RegisterPlayerResponse"
                         }
                     }
                 }
